<resources>
    <string name="app_name">Quote</string>
    <string name="AboutProgram">О программе</string>
    <string name="something">Что-то</string>
    <string name="Example">Здесь вы можете написать вашу цитату</string>
    <string name="Add">Добавить</string>
    <string name="EnterText">Введите текст:</string>
    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>
    <string name="Text">Текст:</string>
    <string name="Change">Изменить</string>
    <string name="changeText">Измените текст:</string>
    <string name="search">Search</string>
    <string name="Delete">Удалить</string>
    <string name="unknown">Неизвестный</string>
    <string name="Enter_author">Введите автора:</string>
    <string name="Author">Автор:</string>
    <string name="ChangeAuthor">Измените автора:</string>
    <string name="anecdotes">Anecdotes</string>
    <string name="quotes">Цитаты</string>
    <string name="list">List</string>
    <string name="open_nav">Open Navigator Drawer</string>
    <string name="close_nav">Close Navigator Drawer</string>
    <string name="jokes">Анекдоты</string>
    <string name="ideas">Идеи</string>
    <string name="search_hint">Поиск...</string>
    <string name="sort">Sort</string>
    <string-array name="sort_options">
        <item>Сортировать по владельцу (а-я)</item>
        <item>Сортировать по владельцу (я-а)</item>
        <item>Сортировать по тексту (а-я)</item>
        <item>Сортировать по тексту (я-а)</item>
    </string-array>
</resources>