<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="10dp"
    style="@style/CustomDialogAlertAddQuote">

    <TextView
        style="@style/TextStyle"
        android:textColor="#8BB14C"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EnterText"
        android:layout_marginTop="10sp"
        android:padding="2sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:textSize="20sp"/>

    <EditText
        style="@style/TextStyle"
        android:inputType="textCapSentences|textMultiLine"
        android:id="@+id/editText"
        android:hint="@string/Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:layout_marginEnd="10sp"
        android:layout_marginStart="10sp"
        />

    <TextView
        android:id="@+id/enter_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Enter_author"
        android:layout_below="@+id/editText"
        android:textColor="#8BB14C"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/edittext_author_layout_add_dialog"
        android:inputType="textCapSentences|textMultiLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_author"
        style="@style/TextStyle"
        android:hint="@string/Author"
        android:layout_marginEnd="10sp"
        android:layout_marginStart="10sp"/>

        <RelativeLayout
            android:id="@+id/layout_add_dialog_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="3sp"
            android:layout_below="@+id/edittext_author_layout_add_dialog"
            android:layout_marginTop="10sp"
            android:layout_centerHorizontal="true"
            >
            <Button
                android:id="@+id/buttonCancel"
                style="@style/ButtonAddStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/buttonOK"
                style="@style/ButtonAddStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150sp"
                android:text="@string/ok" />
        </RelativeLayout>

</RelativeLayout>