<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="10dp"
    style="@style/CustomDialogAlertAddQuote">

    <TextView
        style="@style/TextStyle"
        android:textColor="#8BB14C"
        android:id="@+id/textViewChangeQuote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changeText"
        android:textSize="20sp"
        android:layout_marginTop="10sp"
        android:padding="2sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"/>

    <EditText
        android:id="@+id/editTextChangeQuote"
        style="@style/TextStyle"
        android:inputType="textCapSentences|textMultiLine"
        android:layout_marginTop="40sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:minWidth="48dp"
        />

    <TextView
        style="@style/TextStyle"
        android:textColor="#8BB14C"
        android:id="@+id/textViewChangeAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ChangeAuthor"
        android:textSize="20sp"
        android:layout_below="@+id/editTextChangeQuote"
        android:layout_marginTop="10sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"/>

    <EditText
        android:id="@+id/editTextChangeAuthor"
        style="@style/TextStyle"
        android:inputType="textCapSentences|textMultiLine"
        android:layout_below="@+id/textViewChangeAuthor"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:minWidth="48dp"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextChangeAuthor"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/buttonCancelChangeDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/cancel"
            style="@style/ButtonAddStyle"/>

        <Button
            android:id="@+id/buttonChangeDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Change"
            android:textAllCaps="false"
            android:layout_marginStart="150dp"
            style="@style/ButtonAddStyle"/>
    </RelativeLayout>

</RelativeLayout>